# Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codeprint.py  main.c
Chess/: .gitignore  CMakeLists.txt
Chess/include/: board.h
Chess/src/: setting.c
include/: board.h  move.h  move_internal.h  piece.h  setting.h
src/: board.c  move.c  move_validation.c  piece.c
